addiciona auth a rotas
