# routes/web.php
@@ -12,6 +12,9 @@ use Illuminate\Support\Facades\Route;
 | contains the "web" middleware group. Now create something great!
 |
 */
+Route::get('/login', function () {
+    return 'Unauthenticated';
+});
 
 Route::get('/', function () {
     return view('welcome');
